20160517a 老人入院增改及树控件修改

--- a/src/anyang-1.0/jade/views/demo-center/tree-directive.jade
+++ b/src/anyang-1.0/jade/views/demo-center/tree-directive.jade
@@ -3,7 +3,7 @@ script(type='text/ng-template', id="tree-directive-demo-renderer.html")
         ul
             li(ng-repeat='node in $tree.treeData',ng-include="'tree-directive-demo-node-renderer.html'",ng-init="nIndex = $index;")
 script(type='text/ng-template', id="tree-directive-demo-node-renderer.html")
-    .tree-node.no-select(s-tree-node)
+    .tree-node(s-tree-node)
         i(ng-if="node.children",class="fa",ng-class="{'fa-caret-right':!$tree.isExpanded(nIndex),'fa-caret-down':$tree.isExpanded(nIndex)}",ng-click="$tree.toggle(nIndex,$event)")
         i(ng-if="!node.children",class="fa",ng-class="{'fa-caret-right':$tree.mode=='grid'}")
         .checkbox.c-checkbox(ng-if="$tree.mode=='check'")
@@ -19,8 +19,8 @@ script(type='text/ng-template', id="tree-directive-demo-node-renderer.html")
     .tree.tree-demo(s-tree,s-tree-data="vm.treeDataPromise",s-tree-height="vm.size.h-15", s-tree-template-url='tree-directive-demo-renderer.html', ng-model="vm.selectedDistrict")
     span selected:{{vm.selectedDistrict}}
 .col-xs-3
-    .tree.tree-demo(s-tree,s-tree-data="vm.treeDataPromise",s-tree-height="vm.size.h-15", s-tree-template-url='tree-directive-demo-renderer.html',s-tree-option="{mode:'check',checkCascade: true}",ng-model="vm.checkedDistricts")
+    .tree.tree-demo(s-tree,s-tree-data="vm.treeDataPromise",s-tree-height="vm.size.h-15", s-tree-template-url='tree-directive-demo-renderer.html',s-tree-option="{mode:'check',checkCascade: true,selectNodeFormat:'object'}",ng-model="vm.checkedDistricts")
     span checked:{{vm.checkedDistricts}}
 .col-xs-3
-    .tree.tree-dropdown(s-tree,s-tree-data="vm.treeDataPromise",s-tree-height="vm.size.h-60", s-tree-template-url='tree-directive-demo-renderer.html',s-tree-option="{mode:'check',layout:'dropdown'}", ng-model="vm.selectedDistrictOfDropDown")
+    .tree.tree-dropdown(s-tree,s-tree-data="vm.treeDataPromise",s-tree-height="vm.size.h-60", s-tree-template-url='tree-directive-demo-renderer.html',s-tree-option="{mode:'check',layout:'dropdown',selectNodeFormat:'_id,name'}", ng-model="vm.selectedDistrictOfDropDown")
     span selected:{{vm.selectedDistrictOfDropDown}}
