--- a/src/anyang-1.0/jade/views/demo-center/tree-nav.jade
+++ b/src/anyang-1.0/jade/views/demo-center/tree-nav.jade
@@ -10,7 +10,7 @@ script(type='text/ng-template', id="tree-demo-nav-group-renderer.html")
     ul.tree-group-content(ng-if="node.children",ng-show="$tree.isExpanded(nIndex)")
         li(ng-repeat='node in node.children',ng-include="'tree-demo-nav-item-renderer.html'",ng-init="nIndex = (nIndex+$tree.levelSplitChar+$index)")
 script(type='text/ng-template', id="tree-demo-nav-item-renderer.html")
-    .tree-item.tree-node.no-select(s-tree-node)
+    .tree-item.tree-node(s-tree-node)
         i(ng-if="node.children",class="fa",ng-class="{'fa-caret-right':!$tree.isExpanded(nIndex),'fa-caret-down':$tree.isExpanded(nIndex)}",ng-click="$tree.toggle(nIndex,$event)")
         i(ng-if="!node.children",class="fa",ng-class="{'fa-caret-right':$tree.mode=='grid'}")
         i(class="{{node.icon}}", ng-if="node.icon")
