--- a/src/anyang-1.0/jade/views/demo-center/tree-tile.jade
+++ b/src/anyang-1.0/jade/views/demo-center/tree-tile.jade
@@ -3,7 +3,7 @@ script(type='text/ng-template', id="tree-demo-tile-renderer.html")
         ul
             li(ng-repeat='node in $tree.treeData',ng-include="'tree-demo-tile-group-renderer.html'",ng-init="nIndex = $index;")
 script(type='text/ng-template', id="tree-demo-tile-group-renderer.html")
-    .tree-group-head(s-tree-node)
+    .tree-group-head.no-select(s-tree-node)
         i(class="{{node.icon}}", ng-if="node.icon")
         span {{node.name}}
         span(ng-if="node.template" ng-include="node.template")
@@ -11,13 +11,16 @@ script(type='text/ng-template', id="tree-demo-tile-group-renderer.html")
         li(ng-repeat='node in node.children',ng-include="'tree-demo-tile-item-renderer.html'",ng-init="nIndex = (nIndex+$tree.levelSplitChar+$index)")
 script(type='text/ng-template', id="tree-demo-tile-item-renderer.html")
     .row
-        .col-md-1.tree-item.tree-node(s-tree-node) {{node.name}}
-        .col-md-11.tree-item-children(ng-if="node.children",ng-show="$tree.isExpanded(nIndex)")
+        .col-md-1.tree-item.tree-node.no-select(s-tree-node)
+            .vertical-middle
+                span {{node.name}}
+        .col-md-11.tree-item-children.col-border-left(ng-if="node.children",ng-show="$tree.isExpanded(nIndex)")
             ul
                 li(ng-repeat='node in node.children',ng-include="'tree-demo-tile-sub-item-renderer.html'",ng-init="nIndex = (nIndex+$tree.levelSplitChar+$index)")
 script(type='text/ng-template', id="tree-demo-tile-sub-item-renderer.html")
     .tree-sub-item.tree-node(s-tree-node)
-        span {{node.name}}
+        .vertical-middle
+            span {{node.name}}
 .col-xs-10
     .tree.tree-tile(s-tree,s-tree-data="vm.treeDataPromise",s-tree-height="400", s-tree-template-url='tree-demo-tile-renderer.html',s-tree-option="{layout:'tile',expandLevel:2}", ng-model="vm.selectedDistrict")
     span selected:{{vm.selectedDistrict}}
