--- a/src/anyang-1.0/jade/views/organization-pfta/enter-manage-details.jade
+++ b/src/anyang-1.0/jade/views/organization-pfta/enter-manage-details.jade
@@ -106,64 +106,180 @@ form.form-validate.mb-lg(role='form', name="theForm", novalidate='', ng-submit="
                         .col-md-10
                             .tree.tree-dropdown(name='elderly$medical_histories',s-tree,s-tree-data="vm.medical_historiesPromise",s-tree-height="200", s-tree-template-url='tree-directive-default-renderer.html',s-tree-option="{mode:'check',layout:'dropdown'}",ng-model="vm.elderlyModel.medical_histories",required='')
                             span.text-danger(ng-show="utils.vinput(this.theForm,'elderly$medical_histories','required')") {{ "validator.REQUIRED" | translate}}
+                    fieldset: .form-group
+                        <!--备注-->
+                        label.col-md-2.control-label {{ vm.viewTranslatePath('TAB1-LABEL-REMARK') | translate}}:
+                        .col-md-10
+                            textarea.form-control(name='remark',ng-model='vm.model.remark',placeholder='{{vm.viewTranslatePath("TAB1-PLACEHOLDER-REMARK")|translate}}',maxlength="400")
                     .panel.panel-default.panel-grid
                         table.grid.table.table-bordered.table-hover.table-striped
                             thead
                                 tr
                                     th.text-center(check-all,width="30")
                                         .checkbox.c-checkbox(data-toggle="tooltip",data-title="Check All")
-                                            label(ng-click="vm.grid.selectAll($event)")
+                                            label(ng-click="vm.checkElderlyFamilyMemberAll($event)")
                                                 input(type='checkbox')
                                                 span.fa.fa-check
-                                    th.text-center(ng-repeat="column in vm.grid.columns",width="{{column|width}}",ng-hide="column|hide",ng-click="vm.grid.sort.toggle(column)",ng-class="{sortable: column.sortable !== false}")
-                                        | {{column.label}}
-                                        i.glyphicon(ng-if="column.name === vm.grid.sort.column && vm.sort.direction",ng-class="vm.grid.sort.direction|orderClass")
+                                    th.text-center(width="60")
+                                        | 姓名
+                                    th.text-center(width="50")
+                                        | 性别
+                                    th.text-center(width="100")
+                                        | 与老人关系
+                                    th.text-center(width="80")
+                                        | 联系电话
+                                    th.text-center(width="200")
+                                        | 地址
+                                    th.text-center(width="50")
                             tbody
-                                tr(ng-repeat="row in vm.grid.rows|filter:vm.grid.filter|orderBy:vm.grid.sort.column:vm.grid.sort.direction===-1|paging:vm.grid" , ng-click="vm.grid.selectRow($event,row)",ng-dblclick="vm.grid.dblclickRow(row.id)")
-                                    td
-                                        .checkbox.c-checkbox
+                                tr(ng-repeat="row in vm.elderlyModel.family_members" ng-click="vm.grid.selectRow($event,row)",ng-dblclick="vm.grid.dblclickRow(row.id)")
+                                    td.text-center
+                                        .checkbox.c-checkbox(ng-if="!row.$editing")
                                             label
-                                                input(type='checkbox' data="trBubble" ng-model="row.checked" )
-                                                span.fa.fa-check(data="trBubble")
-                                    td.text-left {{::row.name}}
+                                                input(type='checkbox',ng-model="row.checked" )
+                                                span.fa.fa-check
+                                    td.text-left
+                                        span(ng-if="!row.$editing") {{::row.name}}
+                                        input.form-control(name="row$name",type="text",ng-if="row.$editing",ng-model='row.name',placeholder='{{vm.viewTranslatePath("TAB1-PLACEHOLDER-ELDERLY-FAMILY-MEMBER-NAME")|translate}}' ,required='')
+                                        span.text-danger(ng-if="row.$editing",ng-show="utils.vinput(this.theForm,'row$name','required')") {{ "validator.REQUIRED" | translate}}
+                                    td.text-center
+                                        span(ng-if="!row.$editing") {{::row.sex|diFilter:vm.selectBinding.sex}}
+                                        .dropdown(ng-if="row.$editing",s-dropdown,is-button,ng-model="row.sex",s-dropdown-data="vm.selectBinding.sex")
+                                    td.text-center
+                                        span(ng-if="!row.$editing") {{::row.relation_with|diFilter:vm.selectBinding.relationsWithTheElderly}}
+                                        .dropdown(ng-if="row.$editing",s-dropdown,is-button,ng-model="row.relation_with",s-dropdown-data="vm.selectBinding.relationsWithTheElderly")
+                                    td.text-left
+                                        span(ng-if="!row.$editing") {{::row.phone}}
+                                        input.form-control(name="row$phone",type="text",ng-if="row.$editing",ng-model='row.phone',placeholder='{{vm.viewTranslatePath("TAB1-PLACEHOLDER-ELDERLY-FAMILY-MEMBER-PHONE")|translate}}' ,required='',ng-model-options="{debounce:500}",ui-validate="{phone: 'utils.isPhone($value)'}")
+                                        span.text-danger(ng-if="row.$editing",ng-show="utils.vinput(this.theForm,'row$phone','required')") {{ "validator.REQUIRED" | translate}}
+                                        span.text-danger(ng-if="row.$editing",ng-show="utils.vinput(this.theForm,'row$phone','phone')") {{ "validator.FORMAT" | translate:{item:"手机号码"} }}
+                                    td.text-left
+                                        span(ng-if="!row.$editing") {{::row.address}}
+                                        input.form-control(type="text",ng-if="row.$editing",ng-model='row.address',placeholder='{{vm.viewTranslatePath("TAB1-PLACEHOLDER-ELDERLY-FAMILY-MEMBER-ADDRESS")|translate}}' ,required='')
                                     td
-                                        .btn-group
-                                            a.btn.btn-primary.btn-xs(title="{{'button.EDIT'|translate}}",ng-click="vm.grid.edit(row._id)")
+                                        .btn-group(ng-if="!row.$editing")
+                                            a.btn.btn-primary.btn-xs(title="{{'button.EDIT'|translate}}",ng-click="vm.editElderlyFamilyMember(row)")
                                                 i.glyphicon.glyphicon-pencil
-                                tr(ng-if="vm.grid.paged.length==0")
-                                    td(colspan="{{utils.noResultsColspan(vm)}}") {{ 'grid.NO-RESULTS' | translate}}
+                                        .btn-group(ng-if="row.$editing")
+                                            a.btn.btn-primary.btn-xs(title="{{'button.SAVE'|translate}}",ng-click="vm.saveElderlyFamilyMember(row)")
+                                                i.glyphicon.glyphicon-ok-sign
+                                        .btn-group(ng-if="row.$editing")
+                                            a.btn.btn-primary.btn-xs(title="{{'button.CANCEL'|translate}}",ng-click="vm.cancelElderlyFamilyMember(row)")
+                                                i.glyphicon.glyphicon-remove-sign
                         .panel-footer
                             .row
                                 .col-md-4.text-left
                                     .btn-toolbar
                                         .btn-group
-                                            a.btn.btn-primary.btn-sm(title="{{'button.ADD'|translate}}",ng-click="vm.grid.add()")
+                                            a.btn.btn-primary.btn-sm(title="{{'button.ADD'|translate}}",ng-click="vm.addElderlyFamilyMember()")
                                                 i.glyphicon.glyphicon-plus
-                                            a.btn.btn-primary.btn-sm(title="{{'button.REMOVE'|translate}}",ng-click="vm.grid.disable()")
+                                            a.btn.btn-primary.btn-sm(title="{{'button.REMOVE'|translate}}",ng-click="vm.removeElderlyFamilyMember()")
                                                 i.glyphicon.glyphicon-minus
-                                .col-md-8
-                                    pagination.pagination-sm.pull-right(total-items="vm.grid.page.totals",ng-model="vm.grid.page.no",max-size="5",items-per-page="vm.grid.page.size",boundary-links="true" ,ng-change="vm.grid.paging()")
             tab(active="vm.tab2.active")
                 tab-heading
                     | {{ vm.viewTranslatePath('TAB2') | translate}}
                     span.text-danger(title="{{'validator.FIELD-INVALID'|translate}}" , ng-show="utils.vtab('contentTab2')")
                         i.glyphicon.glyphicon-minus-sign
                 div#contentTab2
-                    | tab2
+                    fieldset: .form-group
+                        <!--伙食信息-->
+                        label.col-md-2.control-label {{ vm.viewTranslatePath('TAB2-BOARD-INFO') | translate}}:
+                        .col-md-10
+                            .btn-group
+                                .btn.btn-primary(name='elderly$board_info',ng-repeat='board_info in vm.selectBinding.board_infos',ng-model='vm.model.board_info',ng-click='vm.setBoardSummary(board_info)',btn-radio="board_info.item_id",required='') {{board_info.item_name}}
+                            span.text-danger(ng-show="utils.vinput(this.theForm,'elderly$board_info','required')") {{ "validator.REQUIRED" | translate}}
+                    fieldset: .form-group
+                        <!--床位信息-->
+                        label.col-md-2.control-label {{ vm.viewTranslatePath('TAB2-ROOM-INFO') | translate}}:
+                        .col-md-10
+                            .tree.tree-tile(s-tree,s-tree-data="vm.treeDataPromiseOfRoom",s-tree-height="400", s-tree-template-url='tree-room-tile-renderer.html',s-tree-option="{layout:'tile'}", ng-model="vm.model.room_info",required='')
             tab(active="vm.tab3.active")
                 tab-heading
                     | {{ vm.viewTranslatePath('TAB3') | translate}}
                     span.text-danger(title="{{'validator.FIELD-INVALID'|translate}}" , ng-show="utils.vtab('contentTab3')")
                         i.glyphicon.glyphicon-minus-sign
                 div#contentTab3
-                    | tab3
+                    fieldset: .form-group
+                        <!--护理信息-->
+                        label.col-md-2.control-label {{ vm.viewTranslatePath('TAB3-NURSING-INFO') | translate}}:
+                        .col-md-10
+                            .btn-group
+                                .btn.btn-primary(name='elderly$nursing_info',ng-repeat='nursing_info in vm.selectBinding.nursing_infos',ng-model='vm.model.nursing_info',ng-click='vm.setNursingSummary(nursing_info)',btn-radio="nursing_info.item_id",required='') {{nursing_info.item_name}}
+                            span.text-danger(ng-show="utils.vinput(this.theForm,'elderly$nursing_info','required')") {{ "validator.REQUIRED" | translate}}
+                    fieldset: .form-group
+                        <!--特色服务-->
+                        label.col-md-2.control-label {{ vm.viewTranslatePath('TAB3-CUSTOM-SERVICE-INFO') | translate}}:
+                        .col-md-10
             tab(active="vm.tab4.active")
                 tab-heading
                     | {{ vm.viewTranslatePath('TAB4') | translate}}
                     span.text-danger(title="{{'validator.FIELD-INVALID'|translate}}" , ng-show="utils.vtab('contentTab4')")
                         i.glyphicon.glyphicon-minus-sign
                 div#contentTab4
-                    | tab4
+                    fieldset: .form-group
+                        <!--收费项目-->
+                        label.col-md-2.control-label {{ vm.viewTranslatePath('TAB4-CHARGE-ITEM') | translate}}:
+                        .col-md-10
+                            ul.charge-item-in-enter(ng-repeat='charge_item_level_one in vm.selectedStandard.children')
+                                li.charge-item-level-one
+                                    span {{charge_item_level_one._id | translate}}
+                                li.charge-item-level-two( ng-class='{"selected":vm.isSelected(charge_item_level_two) }', ng-repeat='charge_item_level_two in charge_item_level_one.children')
+                                    .row
+                                        .col-md-1
+                                            .checkbox.c-checkbox(ng-if="charge_item_level_two.data && charge_item_level_two.data.manual_seletable")
+                                                label
+                                                    input(type='checkbox',ng-model="vm.selectionOfManualSelectable[charge_item_level_two.item_id]" )
+                                                    span.fa.fa-check
+                                        .col-md-5
+                                            span {{charge_item_level_two.item_id | translate}}
+                                        .col-md-6
+                                            span ￥ {{charge_item_level_two.period_price}} / {{vm.period_map[charge_item_level_two.period]}}
+                    fieldset: .form-group
+                        <!--费用小计-->
+                        label.col-md-2.control-label {{ vm.viewTranslatePath('TAB4-CHARGE-PERIOD-PRICE-SUM') | translate}}:
+                        .col-md-10
+                            span ￥{{vm.sumPeriodPrice()}} / {{ vm.viewTranslatePath('TAB4-PERIOD-OF-MONTH') | translate }}
+                    fieldset: .form-group
+                        <!--预收期间-->
+                        label.col-md-2.control-label {{ vm.viewTranslatePath('TAB4-PERIOD-VALUE-IN-ADVANCE') | translate}}:
+                        .col-md-10
+                            .btn-group
+                                .btn.btn-primary(name='period_value_in_advance',ng-repeat='periodValue in vm.selectBinding.periodValues',ng-model='vm.model.period_value_in_advance',btn-radio="periodValue",required='') {{ vm.viewTranslatePath('TAB4-PERIOD-OF-MONTH') | translate:{period_value:periodValue+''} }}
+                            span.text-danger(ng-show="utils.vinput(this.theForm,'period_value_in_advance','required')") {{ "validator.REQUIRED" | translate}}
+                    fieldset: .form-group
+                        <!--费用小计-->
+                        label.col-md-2.control-label {{ vm.viewTranslatePath('TAB4-CHARGE-TOTALS') | translate}}:
+                        .col-md-10
+                            span ￥{{vm.sumPeriodPrice() * vm.model.period_value_in_advance}}
     .text-right.mt-lg
+        button.btn.btn-danger.pull-left(type="button",ng-click="vm.model.elderlyId = null") 清除vm.model.elderlyId
         button.btn.btn-warning(type="button",ng-click="vm.cancel()") {{'button.CANCEL'|translate}}
         button.btn.btn-success(type="submit") {{'button.SAVE'|translate}}
+script(type='text/ng-template', id="tree-room-tile-renderer.html")
+    .ul-container
+        ul
+            li(ng-repeat='node in $tree.treeData',ng-include="'tree-room-tile-district-renderer.html'",ng-init="nIndex = $index;")
+script(type='text/ng-template', id="tree-room-tile-district-renderer.html")
+    .tree-group.no-select(s-tree-node)
+        .tree-group-head.cascade-selectable
+            i(class="{{node.icon}}", ng-if="node.icon")
+            span {{node.name}}
+            span(ng-if="node.template" ng-include="node.template")
+        ul.tree-group-content(ng-if="node.children",ng-show="$tree.isExpanded(nIndex)")
+            li(ng-repeat='node in node.children',ng-include="'tree-room-tile-floor-renderer.html'",ng-init="nIndex = (nIndex+$tree.levelSplitChar+$index)")
+script(type='text/ng-template', id="tree-room-tile-floor-renderer.html")
+    .tree-group.row.no-select(s-tree-node)
+        .col-md-1.tree-item.cascade-selectable
+            .vertical-middle.floor
+                span {{node.name}}
+        .col-md-11.tree-item-children
+            ul(ng-if="node.children",ng-show="$tree.isExpanded(nIndex)")
+                li(ng-repeat='node in node.children',ng-include="'tree-room-tile-room-renderer.html'",ng-init="nIndex = (nIndex+$tree.levelSplitChar+$index);roomCapacity=node.capacity")
+script(type='text/ng-template', id="tree-room-tile-room-renderer.html")
+    .tree-group.no-select(s-tree-node)
+        .tree-sub-item.room-head.cascade-selectable
+            span {{node.name}}
+        ul.room-body
+            li(ng-class="{'single-bed':roomCapacity==1,'double-beds':roomCapacity>1 && roomCapacity<3,'four-beds':roomCapacity>=3 && roomCapacity<5,'six-beds':roomCapacity>=5 && roomCapacity<7}",ng-repeat='node in node.children',ng-include="'tree-room-tile-bed-renderer.html'",ng-init="nIndex = (nIndex+$tree.levelSplitChar+$index)")
+script(type='text/ng-template', id="tree-room-tile-bed-renderer.html")
+    .tree-node.room-bed.parent-cascade-select(s-tree-node) {{roomCapacity == 1 ? '单间' : node.name}}
