--- a/src/anyang-1.0/jade/views/partials/offsidebar-tab1.jade
+++ b/src/anyang-1.0/jade/views/partials/offsidebar-tab1.jade
@@ -1,9 +1,10 @@
 h3.text-center.text-thin 目标
 .col-xs-12
     ul.list-unstyled.workitem
-        li.text-info 老人入院记录增删改查、入院评估（收费项目勾选）
+        li.text-info 老人入院记录删除
+        li.text-info 修复租户订单修改时切换租户无法展现树的bug
+        li.text-info 租户-收费项目自定义
         li.text-info 租户-系统管理-部门管理
-        li.text-info 老人入院后增加到老人档案
         li.text-info 老人入院后增加到老人档案租户自定义部分
 
 
