--- a/src/anyang-1.0/less/app.less
+++ b/src/anyang-1.0/less/app.less
@@ -65,5 +65,6 @@
 // Print CSS
 @import "app/print";
 
-//Subsystem CSS
-@import "subsystem/manage-center/func";
+////Subsystem CSS
+//@import "subsystem/manage-center/func";
+//@import "subsystem/organization-pfta/enter-manage";
