--- a/src/anyang-1.0/less/subsystem/manage-center/func.less
+++ b/src/anyang-1.0/less/subsystem/manage-center/func.less
@@ -5,9 +5,12 @@
 @func-price-li-height:60px;
 @func-price-margin-bottom:40px;
 
+@func-price-totals-vertical:     6px;
+@func-price-totals-horizontal:   16px;
+
 .func-price-totals{
 
-  padding:@padding-base-vertical @padding-base-horizontal;
+  padding:@func-price-totals-vertical @func-price-totals-horizontal;
   > span.currency{
     border-bottom: solid 1px @gray-dark;
     padding:0 10px;
