--- a/src/anyang-1.0/jade/views/partials/offsidebar-tab2.jade
+++ b/src/anyang-1.0/jade/views/partials/offsidebar-tab2.jade
@@ -1,7 +1,10 @@
 h3.text-center.text-thin 目标达成
 .col-xs-12
     ul.list-unstyled.workitem
-        li.finished.text-success 树增加平铺布局(2016.5.3-2016.5.3)
+        li.finished.text-success 老人入院后增加到老人档案(2016.5.10-2016.5.17)
+        li.finished.text-success 老人入院记录增改查（收费项目勾选）(2016.5.10-2016.5.17)
+        li.finished.text-success 租户-收费标准(2016.5.6-2016.5.9)
+        li.finished.text-success 树增加平铺布局(2016.5.3-2016.5.5)
         li.finished.text-success 树增加导航布局(2016.4.28-2016.4.29)
         li.finished.text-success 树重构并支持标签构建(2016.4.25-2016.4.27)
         li.finished.text-success box-input类似支付密码输入框directive(2016.4.23)
